fix overflow-x hidden

--- a/src/page/MobileComponent/styles.css
+++ b/src/page/MobileComponent/styles.css
@@ -2,7 +2,7 @@
     flex-direction: column;
     text-align: center;
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .subtitle {
     flex-direction: row;
